# ve

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.docs  Makefile  README.md  test.verve  test_dependency_analysis.ve  test_main.ve
.github/workflows/: deploy-docs.yml  languages.yml
docs/: 404.html  README.md  getting-started.html  index.html  server.ve
docs/website/: LICENSE  README.md  index.html
examples/: enum1.ve
examples/arrays/: 01_array_basics.ve  02_array_operations.ve  03_array_functions.ve  README.md
examples/basics/: 01_hello_world.ve  02_variables.ve  03_functions.ve  04_types.ve  05_control_flow.ve  06_struct.ve  README.md  control_flow.ve  control_flow.vrv  functions.ve  functions.vrv  hello_world.ve  types.ve  variables.ve  variables.vrv
examples/calculator/: main.ve
examples/experimental/: enums.ve  optional_types.ve  random.ve
examples/modularity/: README.md
examples/modularity/01_math/: main.ve  math.ve
examples/modularity/math/: main.ve  math.ve
lib/std/: ve.toml
lib/std/src/: core.ve  io.ve  main.ve  math.ve  prelude.ve  process.ve  testing.ve
scripts/: INSTALL.md  README.md  install-dev.sh  install.bat  install.ps1  install.sh  uninstall.sh
src/: ast.rs  cli.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  typeck.rs
src/cli/: benchmark.rs  init.rs  mod.rs  run.rs  test.rs  upgrade.rs
src/codegen/: c.rs  compile_error.rs  cranelift.rs  mod.rs
src/compiler/: cache.rs  incremental.rs  mod.rs
src/helpers/: mod.rs
src/utils/: mod.rs
tests/: integration_tests.rs
tests/integration/invalid/: type_mismatch.vrv
tests/integration/valid/: arithmetic.vrv
tests/unit/: lexer_tests.rs  mod.rs  parser_tests.rs
(+2 files in other folders)
