[package]
name = "ve"
version = "0.1.0"
edition = "2024"

[lib]
name = "ve"
path = "src/lib.rs"

[[bin]]
name = "ve"
path = "src/main.rs"

[dependencies]
logos = "0.15.0"
codespan = "0.11.1"
codespan-reporting = "0.11.0"
clap = { version = "4.5.23", features = ["derive"]}
anyhow = "1.0.95"
cranelift = "0.101.0"
cranelift-module = "0.101.0"
cranelift-jit = "0.101.0"
cranelift-native = "0.101.0"
cranelift-codegen = "0.101.0"
cranelift-frontend = "0.101.0"
cranelift-object = "0.101.0"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

