[package]
name = "ve"
version = "0.1.13"
edition = "2024"

[lib]
name = "ve"
path = "src/lib.rs"

[[bin]]
name = "ve"
path = "src/main.rs"

[dependencies]
logos = "0.15.0"
codespan = "0.11.1"
codespan-reporting = "0.11.0"
clap = { version = "4.5.23", features = ["derive"]}
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"